--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+      - name: 'Install Dependencies'
+        run: 'npm ci'
       - name: Initialisation des tests
         run: npm test
