MAJ de la version de node + instal CI

--- a/.github/workflows/pull-workflow.yml
+++ b/.github/workflows/pull-workflow.yml
@@ -11,7 +11,9 @@ jobs:
       - name: Setup sur node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
+      - name: 'Install Dependencies'
+        run: 'npm ci'
       - name: Initialisation des tests
         run: npm test #car environnement NODE JS
   docker:
