--- a/.github/workflows/pull-workflow.yml
+++ b/.github/workflows/pull-workflow.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Setup sur node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
+      - name: 'Install Dependencies'
+        run: 'npm ci'
       - name: Installation de QEMU Docker #Installation de l'émulateur et virtualiseur de docker
         uses: docker/setup-qemu-action@v1
       - name: Installation de BuildX Docker #plugin CLI qui rajoute(=extends) des commandes à Docker
